feat(users): add new 'getUserByEmail' endpoint
